--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://gitlab.com/Tireur2cables/colorizeimages"
   },
-  "author": "Nicolas Battaglini",
+  "author": "Tireur2cables",
   "license": "ISC",
   "bugs": {
     "url": "https://gitlab.com/Tireur2cables/colorizeimages/issues"
